@@ -1,4 +1,5 @@
 1.1.3
+- Replace snprintf integer to char conversion with uitoa function
 
 1.1.2
 - Release the update lock if starting trust db read operations errors
